--- a/style.css
+++ b/style.css
@@ -354,7 +354,7 @@ body {
 }
 
 
-.category-info button{
+.category-info button {
     aspect-ratio: square;
     position: absolute;
     bottom: 8vh;
@@ -363,7 +363,7 @@ body {
 }
 
 .category-info h1 {
-    
+
     position: absolute;
     left: 50px;
     bottom: 8vh;
@@ -382,4 +382,91 @@ body {
     border-radius: 6px;
     font-size: 16px;
     cursor: pointer;
+}
+
+.rev-container {
+    padding: 40px;
+    background-color: #f0f0eb;
+    font-family: "Rubik", sans-serif;
+}
+
+.rev-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 25px;
+}
+
+.rev-title {
+    font-size: 48px;
+    font-weight: 800;
+    color: #232321;
+}
+
+.rev-button {
+    background-color: #4d6bff;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 6px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.rev-cards {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.rev-card {
+    background-color: white;
+    border-radius: 20px;
+    overflow: hidden;
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.rev-info {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    align-items: center;
+}
+
+.rev-quality {
+    font-size: 18px;
+    font-weight: bold;
+    margin: 0;
+    color: #232321;
+}
+
+.rev-text {
+    font-size: 14px;
+    color: #232321;
+    margin: 5px 0;
+}
+
+.rev-rating {
+    font-size: 14px;
+    color: orange;
+    font-weight: 500;
+}
+
+.rev-avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-left: 10px;
+}
+
+.rev-img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
 }
