added footer and review section

--- a/style.css
+++ b/style.css
@@ -332,9 +332,10 @@ body {
 }
 
 
-.card1{
+.card1 {
     border-top-left-radius: 250px;
 }
+
 .category-card {
     position: relative;
     background: #eceef0;
@@ -469,4 +470,144 @@ body {
     width: 100%;
     height: 200px;
     object-fit: cover;
+}
+
+
+/* Footer Styles */
+
+.foot-container {
+    margin: 40px auto;
+    max-width: 90vw;
+    margin-bottom: 0;
+    background-color: #f0f0eb;
+    font-family: 'Rubik', Arial, sans-serif;
+    padding: 0;
+}
+
+.foot-top {
+    background-color: #4d6bff;
+    color: white;
+    border-radius: 30px 30px 0 0;
+    padding: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.foot-left {
+    max-width: 500px;
+    scale: 1.1;
+    margin-left: 30px;
+}
+
+.foot-heading {
+    font-size: 28px;
+    font-weight: bold;
+    margin: 0 0 10px;
+}
+
+.foot-subtext {
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+
+.foot-input-group {
+    display: flex;
+    gap: 10px;
+}
+
+.foot-input {
+    background-color: transparent;
+    padding: 10px 15px;
+    border: solid 1px white;
+    color: white;
+    border-radius: 6px;
+    outline: none;
+    
+}
+.foot-input::placeholder {
+    color: rgb(214, 214, 214);
+}
+
+.foot-submit {
+    background-color: #232321;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 6px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.foot-logo {
+    width: 350px;
+    height: auto;
+}
+
+.foot-bottom {
+    background-color: #232321;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 40px;
+    position: relative;
+}
+
+.foot-section {
+    min-width: 150px;
+    margin-bottom: 20px;
+}
+
+.foot-about {
+    max-width: 250px;
+}
+
+.foot-title {
+    color: orange;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.foot-desc {
+    color: #ccc;
+    font-size: 14px;
+    line-height: 1.5;
+}
+
+.foot-list {
+    list-style: none;
+    padding: 0;
+    color: #ddd;
+    font-size: 14px;
+}
+
+.foot-list li {
+    margin-bottom: 5px;
+}
+
+.foot-socials span {
+    font-size: 20px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.foot-end{
+    position: relative;
+    background-color: #232321;
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+    align-items: center;
+    height: 150px;
+    object-fit: cover;
+    overflow-y: hidden;
+}
+.foot-end img {
+    position: absolute;
+    top:3px;
+    width: 95%;
+    height: auto;
+    display: block;
 }
